# superperm

./: .gitignore  Makefile  README.md
ChaffinMethod/: ChaffinMethod.c  Readme.txt
ChaffinMethodResults/: ChaffinMethodMaxPerms_4.txt  ChaffinMethodMaxPerms_5.txt  ChaffinMethodMaxPerms_6.txt  ChaffinMethodMaxPerms_7.txt  Readme.txt
DistributedChaffinMethod/: ChaffinMethod.php  ChaffinMethodResults.php  DistributedChaffinMethod.c  Dockerfile  Makefile  README.md  Readme.txt  Superperm.bat  Win10_-_Using_Windows_Subsystem_for_Linux.txt  msysbuild.sh
DistributedChaffinMethod/Debugging/: WindowsBugTest.c  curl.cmd
DistributedChaffinMethod/Server/: ChaffinMethod.php  ChaffinMethodResults.php  dbinfo_skeleton.inc  superpermutations.sql
DistributedChaffinMethod/Windows64/: README.md
FastDCM/: FastDCM.c  README.md
FastDCM/Headers/: GPU.h  Structures.h
FastDCM/Kernels/: delegateKernel.txt  orderIndexKernel.txt  splitKernel.txt
FastDCMTest/: FastDCMTest.c  README.md  Structures.h  splitKernel.txt
FastDCMTest/Headers/: GPU.h  NInfo.h  Structures.h
FastDCMTest/Kernels/: collectSuperKernel.txt  delegateKernel.txt  dummy1.txt  orderIndex2Kernel.txt  orderIndexKernel.txt  searchKernel.txt  splitKernel.txt
KernelFinder/: KernelFinder.c  Readme.txt
PermutationChains/: .gitignore  PermutationChains.c  Readme.txt
atsp/: 5.atsp  6.atsp
database-app/: app.py  app.yaml  superperm.py
database-app/templates/: input.html  output.html
demutator/: README  data.txt  demutator.c  out.txt
docker/: README.md
docker/LKH/: Dockerfile  aliases
java-solver/: readme.txt  superperm_sols.txt
lower-bound-notes/: .gitignore  Makefile  lower-bound-notes.tex  refs.bib
misc/depermutate/: LICENSE  README.md  configure.ac
misc/depermutate/src/: Makefile.am  depermutate.c  env.c
notes/: construction.txt  palindromic.txt
tsp/: 5.tsp
(+4309 files in other folders)
